--- a/app/src/main/res/layout/item_annotation_full_width.xml
+++ b/app/src/main/res/layout/item_annotation_full_width.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:minHeight="201dp"
+    android:minHeight="160dp"
     android:layout_marginTop="20dp"
     android:layout_height="wrap_content"
     android:paddingVertical="8dp"
@@ -17,17 +17,16 @@
 
         <FrameLayout
             android:id="@+id/fl_annotation_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="80dp"
+            android:layout_height="120dp"
             android:layout_margin="16dp"
             app:layout_constraintEnd_toStartOf="@id/tv_book_title"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
         <ImageView
             android:id="@+id/iv_thumbnail"
-            android:layout_width="120dp"
-            android:minHeight="160dp"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:src="@drawable/ic_annotation"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -36,15 +35,15 @@
 
             <ImageView
                 android:id="@+id/iv_book_color"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
                 android:layout_margin="12dp"
                 android:layout_gravity="bottom|end"
                 android:background="@drawable/bg_circle"
                 android:backgroundTint="@android:color/transparent"
                 tools:backgroundTint="@color/blue_700"
                 android:contentDescription="@string/label_book_image"
-                android:padding="8dp"
+                android:padding="2dp"
                 />
 
         </FrameLayout>
@@ -58,7 +57,7 @@
                 android:id="@+id/tv_annotation_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="22sp"
+                android:textSize="20sp"
                 android:textColor="@color/dark_gray_1"
 
                 tools:ignore="Suspicious0dp"
@@ -77,7 +76,7 @@
                 android:layout_height="match_parent">
                 <TextView
                     android:id="@+id/tv_book_title"
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_width="wrap_content"
