Fix progressBarColor on light mode in fragment_annotation_list.xml

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimaryVariant">#492376</item>
         <item name="colorOnPrimary">@color/black</item>
         <item name="readablePrimaryColor">@color/white</item>
+        <item name="progressBarColor">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
@@ -27,6 +28,7 @@
         <item name="colorPrimaryVariant">#492376</item>
         <item name="colorOnPrimary">@color/white</item>
         <item name="readablePrimaryColor">@color/white</item>
+        <item name="progressBarColor">@color/white_blue</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
@@ -42,6 +44,7 @@
         <item name="colorPrimaryVariant">#492376</item>
         <item name="colorOnPrimary">@color/white</item>
         <item name="readablePrimaryColor">@color/white</item>
+        <item name="progressBarColor">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
@@ -59,6 +62,7 @@
         <item name="colorPrimaryVariant">#492376</item>
         <item name="colorOnPrimary">@color/white</item>
         <item name="readablePrimaryColor">@color/white</item>
+        <item name="progressBarColor">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
