--- a/app/src/main/res/layout/fragment_annotation_list.xml
+++ b/app/src/main/res/layout/fragment_annotation_list.xml
@@ -14,10 +14,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:trackColor="?attr/readablePrimaryColor"
+        app:trackColor="?attr/progressBarColor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
         app:trackCornerRadius="16dp"
         android:indeterminate="true"
         android:visibility="visible" />
