--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimaryVariant">#007AB3</item>
         <item name="colorOnPrimary">@color/white</item>
         <item name="readablePrimaryColor">@color/purple_primary</item>
+        <item name="progressBarColor">@color/purple_primary</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/splash_screen_dark_purple</item>
@@ -28,6 +29,7 @@
         <item name="colorPrimaryVariant">#007AB3</item>
         <item name="colorOnPrimary">@color/white</item>
         <item name="readablePrimaryColor">@color/white_blue</item>
+        <item name="progressBarColor">@color/purple_primary</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
@@ -47,6 +49,7 @@
         <item name="colorPrimaryVariant">#492376</item>
         <item name="colorOnPrimary">@color/white</item>
         <item name="readablePrimaryColor">@color/white_blue</item>
+        <item name="progressBarColor">@color/white_blue</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
@@ -62,6 +65,7 @@
         <item name="colorPrimaryVariant">#492376</item>
         <item name="colorOnPrimary">@color/white</item>
         <item name="readablePrimaryColor">@color/white_blue</item>
+        <item name="progressBarColor">@color/white_blue</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
