--- a/app/src/main/res/layout/fragment_annotation_list.xml
+++ b/app/src/main/res/layout/fragment_annotation_list.xml
@@ -21,14 +21,52 @@
         android:indeterminate="true"
         android:visibility="visible" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_list_book"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:spanCount="2"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="20dp"
-        tools:listitem="@layout/item_annotation_full_width" />
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/pg_loading"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="vertical"
+        >
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/label_show_more"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="3"
+                android:padding="20dp"
+                android:text="@string/label_show_more"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/iv_view_more_notes"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
+                android:layout_gravity="end"
+                android:paddingEnd="20dp"
+                android:src="@drawable/ic_arrow_right"
+                android:visibility="visible" />
+        </GridLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_list_book"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:spanCount="2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="20dp"
+            tools:listitem="@layout/item_annotation_full_width" />
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
