Finish ProfileFragment, fix progress bar in LoginFragment, fix bearer token on delete annotation endpoint

--- a/app/src/main/res/navigation/home_navigation.xml
+++ b/app/src/main/res/navigation/home_navigation.xml
@@ -25,7 +25,7 @@
 
     <fragment
         android:id="@+id/navigation_profile"
-        android:name="com.bibliotecadebolso.app.ui.home.ui.Profile.ProfileFragment"
+        android:name="com.bibliotecadebolso.app.ui.home.ui.profile.ProfileFragment"
         android:label="@string/title_profile"
         tools:layout="@layout/fragment_profile" />
 </navigation>
