--- a/app/src/main/res/layout/fragment_book_list.xml
+++ b/app/src/main/res/layout/fragment_book_list.xml
@@ -234,6 +234,10 @@
             </LinearLayout>
         </ScrollView>
 
+        <include
+            android:id="@+id/include_ll_error"
+            layout="@layout/layout_error_empty_full"/>
+
     </com.bibliotecadebolso.app.view.SwipeRefreshLayoutToHorizontalScroll>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
