--- a/app/src/main/res/layout/layout_error_empty_full.xml
+++ b/app/src/main/res/layout/layout_error_empty_full.xml
@@ -8,10 +8,11 @@
     android:orientation="vertical"
     android:visibility="gone"
     tools:visibility="visible"
+
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         tools:ignore="UselessParent">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
