Add AboutActivity.kt and update pt-br translation. Fix 'forgot password' label color. Fix 'delete account' button color. Update disable account icon on navigation drawer

--- a/app/src/main/res/layout/activity_delete_accout.xml
+++ b/app/src/main/res/layout/activity_delete_accout.xml
@@ -77,6 +77,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="start"
             android:text="@string/title_activity_delete_account"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
