--- a/app/src/main/res/layout/fragment_access.xml
+++ b/app/src/main/res/layout/fragment_access.xml
@@ -66,7 +66,7 @@
             android:clickable="true"
             android:gravity="center"
             android:text="@string/label_forgot_password"
-            android:textColor="@color/gd_blue_purple_3"
+            android:textColor="@color/white"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
