--- a/app/src/main/res/menu/topbar_main_menu.xml
+++ b/app/src/main/res/menu/topbar_main_menu.xml
@@ -14,7 +14,7 @@
 
         <item
             android:id="@+id/mi_disable_account"
-            android:icon="@drawable/ic_exit"
+            android:icon="@drawable/ic_person_remove"
             android:title="@string/label_disable_account"/>
     </group>
 
